5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4347/executions/1811_2563.log
== SUBMITION (2019-06-11 22:32:35) 
-- CODE:
from numpy import*
x=array(eval(input("medias finais: ")))
h=0
while(size(x)>1):
	h=0
	for i in x:
		if(i>=5) and (i<7):
			h=h+1
	print(h)
	x=array(eval(input("medias: ")))
-- EXECUTION TIME:
1.01422
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
medias finais: 5
medias: 3
medias:
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 22:33:12) 
-- CODE:
from numpy import*
x= array(eval(input("medias finais: ")))
h=0
while(size(x)>1):
	h=0
	for i in x:
		if( i> = 5 ) and (i < 7):
			h=h+1
	print(h)
	x=array(eval(input("medias: ")))
-- EXECUTION TIME:
0.695313
-- ERROR:
  File "/home/codebench/codes/1811/2563/main.py", line 7
    if( i> = 5 ) and (i < 7):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 22:34:25) 
-- CODE:
from numpy import*
x= array(eval(input("medias finais: ")))
h=0
while(size(x)>1):
	h=0
	for i in x:
		if( i> = 5 ) and (i < 7):
			h=h+1
	print(h)
	x=array(eval(input("medias: ")))
-- EXECUTION TIME:
0.647668
-- ERROR:
  File "/home/codebench/codes/1811/2563/main.py", line 7
    if( i> = 5 ) and (i < 7):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 22:35:53) 
-- CODE:
from numpy import*
x= array(eval(input("Digite as medias finais: ")))
h=0
while(size (x) >1):
	h=0
	for i in x:
		if( i> = 5 ) and (i < 7):
			h=h+1
	print(h)
	x=array(eval(input(" Digite as medias: ")))
-- EXECUTION TIME:
0.752448
-- ERROR:
  File "/home/codebench/codes/1811/2563/main.py", line 7
    if( i> = 5 ) and (i < 7):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 22:36:47) 
-- CODE:
from numpy import*
x= array (eval (input("Digite as medias finais: ")))
h=0
while(size (x) >1) :
	h=0
	for i in x:
		if( i> = 5 ) and (i < 7) :
			h=h+1
	print(h)
	x=array(eval(input(" Digite as medias: ")))
-- EXECUTION TIME:
0.747521
-- ERROR:
  File "/home/codebench/codes/1811/2563/main.py", line 7
    if( i> = 5 ) and (i < 7) :
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:38:09) 
-- CODE:
from numpy import*
x= array (eval (input("Digite as medias finais: ")))
h=0
while(size (x) >1) :
	h=0
	for i in x:
		if( i> = 5 ) and (i < 7) :
			h=h+1
	print(h)
	x=array(eval(input(" Digite as medias: ")))
-- ERROR:
File "XXXX", line 7
    if( i> = 5 ) and (i < 7) :
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:40:23) 
-- CODE:
from numpy import*
x= array (eval (input("Digite as medias finais: ")))
h=0
while(size (x) >1) :
	h=0
	for i in x:
		if(i>= 5) and (i<7) :
			h=h+1
	print(h)
	x=array(eval(input(" Digite as medias: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 22:40:32) 
-- CODE:
from numpy import*
x= array (eval (input("Digite as medias finais: ")))
h=0
while(size (x) >1) :
	h=0
	for i in x:
		if(i>= 5) and (i<7) :
			h=h+1
	print(h)
	x=array(eval(input(" Digite as medias: ")))
-- EXECUTION TIME:
1.22183
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
